--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="title">Most Viewed - Day</h1> <!-- Dynamic title based on filter selection -->
+    <h1 id="title">Most Viewed - Day</h1> <!-- Dynamic title on filter selection -->
     <div class="container"> <!-- Puts sidebar and article-container next to each other -->
         <div class="sidebar">
             <h2>Filter</h2>
